--- a/index.html
+++ b/index.html
@@ -4,34 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="style.css" rel=stylesheet />
+  <link href="indexstyle.css" rel=stylesheet />
 </head>
 
 <body>
-  <div class="container" class="vert">
-    <h1>Hello world!</h1>
-    <h2>Welcome to my widget page</h2>
+  <div class="section">
+    <div class="flexbox">
+      <h1>WELCOME TO ME</h1>
+    </div>
   </div>
-
-  <p>
-    -----------------------
-  </p>
-  <!-- Greg -->
-  <div class="container">
-    <a href="george.html">Greg</a>
-  </div>
-
-  <p>
-    -----------------------
-  </p>
-
-  <br>
-
-  <div class="container" class="vert">
-    <a href="weather_widget.html">Weather Widget</a>
-    <a href="qotd.html">QOTD</a>
-    <a href="today.html">Today</a>
-  </div>
+  
 </body>
 
 </html>
