--- a/sim.html
+++ b/sim.html
@@ -45,7 +45,7 @@
       <div class="section">
         <div class="flexbox">
           <div class="image half">
-            <img src="images/icao-logo.png" alt="">
+            <img src="infographicAssets/images/icao-logo.png" alt="">
           </div>
           <div class="textbox half">
             <h1>The ICAO 2050 Mission</h1>
@@ -55,7 +55,7 @@
       </div>
     </section>
     <div data-aos="fade-up" class="section break" id="break">
-      <img src="images/hon-ab-sustainable-aviation-fuel.jpeg" alt="">
+      <img src="infographicAssets/images/hon-ab-sustainable-aviation-fuel.jpeg" alt="">
     </div>
     <section data-aos="fade-up" id="theproblem">
       <div class="flexbox">
@@ -70,10 +70,10 @@
           <div class="textbox half">
             <h1>The United States</h1>
             <p>The US contributes to more than 70% of the world pollution due to aviation.</p>
-            <img src="images/graphics/usfuelburn.png" alt="">
+            <img src="infographicAssets/images/graphics/usfuelburn.png" alt="">
           </div>
           <div class="image half">
-            <img src="images/graphics/annualstats.png" alt="">
+            <img src="infographicAssets/images/graphics/annualstats.png" alt="">
             <p class="caption">Data for United States from FY2019.</p>
           </div>
         </div>
@@ -81,30 +81,30 @@
       <div class="section" id="polluters">
         <div class="flexbox">
           <div class="image half">
-            <img src="images/graphics/piechart.png" alt="" style="width: 70%;">
+            <img src="infographicAssets/images/graphics/piechart.png" alt="" style="width: 70%;">
           </div>
           <div class="image half">
-            <img src="images/graphics/topworldpolluters.png" alt="">
+            <img src="infographicAssets/images/graphics/topworldpolluters.png" alt="">
           </div>
         </div>
       </div>
       <div class="section" id="pollution">
         <div class="flexbox">
           <div class="half">
-            <img src="images/graphics/toxicgases.png" alt="">
+            <img src="infographicAssets/images/graphics/toxicgases.png" alt="">
           </div>
           <div class="half">
             <div class="textbox">
               <h1>Pollution</h1>
               <p>Jet engines convert kerosene into greenhouse gases (GHGs) such as carbon dioxide, nitrous gases, sulfuric gases, and more...</p>
             </div>
-            <img src="images/graphics/co2produced.png" alt="">
+            <img src="infographicAssets/images/graphics/co2produced.png" alt="">
           </div>
         </div>
       </div>
     </section>
     <div data-aos="fade-up" class="break stack">
-      <img src="images/United_Biofuel_Flight1180-520_0.jpeg" alt="">
+      <img src="infographicAssets/images/United_Biofuel_Flight1180-520_0.jpeg" alt="">
       <p class="caption">United Airlines is committed to using SAF.</p>
     </div>
     <section data-aos="fade-up" id="thesolution">
@@ -128,7 +128,7 @@
       <div class="section">
         <div class="flexbox">
           <div class="image">
-            <img src="images/graphics/sources.png" alt="" style="max-width: 60%;">
+            <img src="infographicAssets/images/graphics/sources.png" alt="" style="max-width: 60%;">
           </div>
         </div>
       </div>
@@ -141,12 +141,12 @@
               <p>There are 3 main emerging sources for SAF, and 1 already commercialized option: <strong>HEFA-SPK</strong></p>
             </div>
             <div class="image">
-              <img src="images/graphics/hefasynthesis.png" alt="">
+              <img src="infographicAssets/images/graphics/hefasynthesis.png" alt="">
             </div>
           </div>
           <div class="half">
             <div class="image">
-              <img src="images/graphics/emergingfuels.png" alt="">
+              <img src="infographicAssets/images/graphics/emergingfuels.png" alt="">
             </div>
             <div class="textbox">
               <p style="margin: 30px 0px;">
@@ -154,7 +154,7 @@
               </p>
             </div>
             <div class="image">
-              <img src="images/graphics/10sources.png" alt="">
+              <img src="infographicAssets/images/graphics/10sources.png" alt="">
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
       <div class="section">
         <div class="flexbox">
           <div class="image half">
-            <img src="images/graphics/tonnesgallons.png" alt="">
+            <img src="infographicAssets/images/graphics/tonnesgallons.png" alt="">
           </div>
           <div class="textbox half">
             <h1>How much do we need?</h1>
@@ -172,7 +172,7 @@
       </div>
     </section>
     <div data-aos="fade-up" class="break stack">
-      <img src="images/RollsRoyce_SAF1.jpeg" alt="">
+      <img src="infographicAssets/images/RollsRoyce_SAF1.jpeg" alt="">
       <p class="caption">Rolls Royce began testing 100% aviation biofuel on their engine test platforms in early 2021.</p>
     </div>
     <section data-aos="fade-up" id="thebenefits">
@@ -194,8 +194,8 @@
             </div>
           </div>
           <div class="image half">
-            <!--<img src="images/graphics/neighborhoods.png" alt="">-->
-            <img src="images/nasadc-8.jpeg" alt="">
+            <!--<img src="infographicAssets/images/graphics/neighborhoods.png" alt="">-->
+            <img src="infographicAssets/images/nasadc-8.jpeg" alt="">
             <p class="caption">
               A NASA DC-8 flying on a 50/50 biofuel blend.
             </p>
@@ -205,14 +205,14 @@
       <div class="section">
         <div class="flexbox">
           <div class="image">
-            <img src="images/graphics/5050results.png" alt="">
+            <img src="infographicAssets/images/graphics/5050results.png" alt="">
           </div>
         </div>
       </div>
       <div class="section">
         <div class="flexbox">
           <div class="image half">
-            <img src="images/graphics/otherbenefits.png" alt="">
+            <img src="infographicAssets/images/graphics/otherbenefits.png" alt="">
           </div>
           <div class="textbox half">
             <h1>Other Benefits</h1>
@@ -228,13 +228,13 @@
             <p>The plants grown to produce biofuels will also absorb oxygen. The ICAO hopes that at large enough production scales, the absorption of CO<sub>2</sub> will be enough to offset the emissions by aircraft. The IATA predicts an <strong>80% reduction</strong> in lifecycle carbon emissions.</p>
           </div>
           <div class="image half">
-            <img src="images/graphics/carbonneutral.png" alt="">
+            <img src="infographicAssets/images/graphics/carbonneutral.png" alt="">
           </div>
         </div>
       </div>
     </section>
     <div data-aos="fade-up" class="break stack">
-      <img src="images/virginatlantic.jpg" alt="">
+      <img src="infographicAssets/images/virginatlantic.jpg" alt="">
       <p class="caption">In 2008, Virgin Atlantic flew the first commercial flight powered by a biofuel blend.</p>
     </div>
     <section data-aos="fade-up" id="thejourney">
@@ -245,7 +245,7 @@
         </div>
       </div>
       <div class="section">
-        <img src="images/graphics/timeline.png" alt="" style="padding: 20px 0px;">
+        <img src="infographicAssets/images/graphics/timeline.png" alt="" style="padding: 20px 0px;">
       </div>
       <div class="section">
         <div class="flexbox">
@@ -254,14 +254,14 @@
             <p>The Biden administration has committed <strong>4.3 billion US dollars</strong> to SAF R&D in order to achieve at least a <strong>30% improvement</strong> in fuel efficiency.</p>
           </div>
           <div class="image half">
-            <img src="images/graphics/43bn.png" alt="">
+            <img src="infographicAssets/images/graphics/43bn.png" alt="">
           </div>
         </div>
       </div>
       <div class="section">
         <div class="flexbox">
           <div class="image half">
-            <img src="images/graphics/marketgrowth.png" alt="">
+            <img src="infographicAssets/images/graphics/marketgrowth.png" alt="">
           </div>
           <div class="textbox half">
             <h1>It's booming!</h1>
@@ -271,7 +271,7 @@
       </div>
     </section>
     <div data-aos="fade-up" class="break stack">
-      <img src="images/Boeing ecoDemonstrator 777 test-bed airplane at Frankfurt Airport.jpeg" alt="">
+      <img src="infographicAssets/images/Boeing ecoDemonstrator 777 test-bed airplane at Frankfurt Airport.jpeg" alt="">
       <p class="caption">Boeing's fleet of ecoDemonstrator aircraft have been using various types SAF as part of their testing for a more sustainable future.</p>
     </div>
   </body>
@@ -289,14 +289,14 @@
           <p>In order to produce enough biofuel to meet global demands for aviation fuel, we will not be able to rely on just one production method. Multiple processes of aviation biofuel development will need to be developed.</p>
         </div>
         <div class="image half">
-          <img src="images/graphics/safmethods.png" alt="" style="max-height: 300px; width: auto;">
+          <img src="infographicAssets/images/graphics/safmethods.png" alt="" style="max-height: 300px; width: auto;">
         </div>
       </div>
     </div>
     <div class="section">
       <div class="flexbox">
         <div class="image half">
-          <img src="images/graphics/dropin.png" alt="">
+          <img src="infographicAssets/images/graphics/dropin.png" alt="">
         </div>
         <div class="textbox half">
           <h1>Drop In</h1>
@@ -307,7 +307,7 @@
     <div class="section">
       <div class="flexbox">
         <div class="image half">
-          <img src="images/graphics/regulatory&safety.png" alt="">
+          <img src="infographicAssets/images/graphics/regulatory&safety.png" alt="">
         </div>
         <div class="textbox half">
           <p>Because SAF is planned to work with existing engines and technology, they must also be able to meet all current safety and regulatory requirements that conventional aviation fuel meets.</p>
@@ -321,13 +321,13 @@
           <p>Testing has shown burning SAF has little reduction in CO<sub>2</sub> emissions. This means that carbon neutrality must be obtained by offsetting the production. This is done mainly through CO<sub>2</sub> absorption by the plants grown to produce the biofuels.</p>
         </div>
         <div class="image half">
-          <img src="images/graphics/carboncycle.png" alt="" style="max-height: 200px; width: auto;">
+          <img src="infographicAssets/images/graphics/carboncycle.png" alt="" style="max-height: 200px; width: auto;">
         </div>
       </div>
     </div>
   </section>
   <div data-aos="fade-up" class="break stack">
-    <img src="images/im-143102.jpeg" alt="">
+    <img src="infographicAssets/images/im-143102.jpeg" alt="">
     <p class="caption">Gulfstream began using SAF in 2016 for their daily operations, including in flight tests of their new aircraft.</p>
   </div>
   <section data-aos="fade-up" id="today">
@@ -340,10 +340,10 @@
     <div class="section">
       <div class="flexbox">
         <div class="half">
-          <img src="images/graphics/pioneers.png" alt="">
+          <img src="infographicAssets/images/graphics/pioneers.png" alt="">
         </div>
         <div class="half">
-          <img src="images/graphics/leading edge.png" alt="">
+          <img src="infographicAssets/images/graphics/leading edge.png" alt="">
         </div>
       </div>
     </div>
@@ -367,13 +367,13 @@
     <div class="section">
       <div class="flexbox">
         <div class="center">
-          <img src="images/graphics/brands.png" alt="">
+          <img src="infographicAssets/images/graphics/brands.png" alt="">
         </div>
       </div>
     </div>
   </section>
   <div data-aos="fade-up" class="break stack">
-    <img src="images/Airlines_Fuel.jpeg" alt="">
+    <img src="infographicAssets/images/Airlines_Fuel.jpeg" alt="">
     <p class="caption">
       Alaska Airlines is committed to using SAF.
     </p>
