--- a/infographic.html
+++ b/infographic.html
@@ -8,16 +8,16 @@
   <body>
     <div class="container">
       <div id="title">
-        <img class="titleimage" src="assets/Header.png" alt="">
+        <img class="titleimage" src="infographicAssets/assets/Header.png" alt="">
       </div>
       <div class="image" id="commitment" style="background-color: rgb(211,233,253);">
-        <img src="assets/Commitment.png" alt="">
+        <img src="infographicAssets/assets/Commitment.png" alt="">
       </div>
       <div class="image" id="context" style="background-color: rgb(236,236,236)">
-        <img src="assets/Context.png" alt="">
+        <img src="infographicAssets/assets/Context.png" alt="">
       </div>
       <div class="image" id="types" style="background-color: rgb(228,254,217)">
-        <img src="assets/Types_Description.png" alt="">
+        <img src="infographicAssets/assets/Types_Description.png" alt="">
       </div>
 
     </div>
