--- a/george.html
+++ b/george.html
@@ -4,11 +4,19 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="gregostyle.css">
 
   <body>
-    <h1>
+  <div>
+    <h1 style="color:lightgreen">
       Welcome to Greg's Widgets
     </h1>
+    <br>
+    <p>
+      Please enjoy your stay! (pls)
+    </p>
+  </div>
+
+
   </body>
 </html>
