--- a/index.html
+++ b/index.html
@@ -10,10 +10,49 @@
 <body>
   <div class="section">
     <div class="flexbox">
-      <h1>WELCOME TO ME</h1>
+      <div class="header">
+        <h1>WELCOME TO ME</h1>
+        <div class="underline"></div>
+      </div>
     </div>
   </div>
-  
+  <div class="section">
+    <div class="flexbox">
+      <h2>The Widget Zone:</h2>
+    </div>
+  </div>
+  <div class="section">
+    <div class="flexbox" id="navi">
+      <a href="qotd.html">Quote Of The Day</a>
+      <a href="weather_sj.html">San Jose's Weather</a>
+      <a href="today.html">Today's Date</a>
+    </div>
+  </div>
+  <br><br>
+  <div class="underline"></div>
+  <br><br>
+  <div class="section">
+    <div class="flexbox" id="gregozone">
+      <a href="george.html">THE GREGO ZONE</a>
+    </div>
+  </div>
 </body>
-
+<br><br>
+<div class="underline"></div>
+<br><br>
+<div class="section">
+  <div class="flexbox">
+    <div class="header">
+      <h1>Better Looking Websites:</h1>
+      <div class="underline"></div>
+    </div>
+  </div>
+</div>
+<br>
+<div class="section">
+  <div class="flexbox" id="navi">
+    <a href="infographic.html">Chem 11 Biofuels Infographic</a>
+    <a href="sim.html">Chem 11 Biofuels Website</a>
+  </div>
+</div>
 </html>
