Fixed typo: oxygen->carbon dioxide

--- a/sim.html
+++ b/sim.html
@@ -225,7 +225,7 @@
         <div class="flexbox">
           <div class="textbox half">
             <h1>Going Carbon Neutral</h1>
-            <p>The plants grown to produce biofuels will also absorb oxygen. The ICAO hopes that at large enough production scales, the absorption of CO<sub>2</sub> will be enough to offset the emissions by aircraft. The IATA predicts an <strong>80% reduction</strong> in lifecycle carbon emissions.</p>
+            <p>The plants grown to produce biofuels will also absorb carbon dioxide. The ICAO hopes that at large enough production scales, the absorption of CO<sub>2</sub> will be enough to offset the emissions by aircraft. The IATA predicts an <strong>80% reduction</strong> in lifecycle carbon emissions.</p>
           </div>
           <div class="image half">
             <img src="infographicAssets/images/graphics/carbonneutral.png" alt="">
