--- a/sim.html
+++ b/sim.html
@@ -49,7 +49,8 @@
           </div>
           <div class="textbox half">
             <h1>The ICAO 2050 Mission</h1>
-            <p>The second conference on aviation and alternative fuels (CAAF/2) endorsed the 2050 ICAO Vision for Sustainable Aviation Fuels as a living inspirational path and called on States, industry and other stakeholders, for a significant proportion of conventional aviation fuels (CAF) to be substituted with sustainable aviation fuels (SAF) by 2050, for international civil aviation to reduce carbon emissions significantly, and whilst pursuing all opportunities in the basket of mitigation measures to reduce emissions as necessary.</p>
+            <p>The second conference on aviation and alternative fuels (CAAF/2) "endorses the 2050 ICAO Vision for Sustainable Aviation Fuels as a living inspirational path and calls on States, industry and other stakeholders, for a significant proportion of conventional aviation fuels (CAF) to be substituted with sustainable aviation fuels (SAF) by 2050, for international civil aviation to reduce carbon emissions significantly, and whilst pursuing all opportunities in the basket of mitigation measures to reduce emissions as necessary."</p>
+            <p class="caption">https://www.icao.int/environmental-protection/GFAAF/pages/ICAO-Vision.aspx</p>
           </div>
         </div>
       </div>
